--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ body, #data{
 
 #countdown{
   margin-top: 2em;
+  
 }
 
 #clockdiv{
@@ -41,15 +42,18 @@ body, #data{
 
 #clockdiv > div{
   padding: 10px;
-  border-radius: 3px;
-  background: #00BF96;
+  border-radius: 50%;
+  /* background: #00BF96; */
   display: inline-block;
 }
 
 #clockdiv div > span{
   padding: 15px;
-  border-radius: 3px;
-  background: #00816A;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  /* background: #00816A; */
+  background: black;
   display: inline-block;
 }
 
@@ -61,6 +65,7 @@ body, #data{
 footer{
   position: absolute;
   bottom:0;
+  padding: 0.2em;
 }
 
 
@@ -72,15 +77,32 @@ footer{
   }
 
   #data{
-    width: 40%;
+    width: 50%;
   }
 
+  #clockdiv{
+    /* color: black; */
+  }
   #countdown{
     margin:0;
+    /* background-color: #838383; */
+    background-color: #ffbf00;
+    height: 100vh;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
   }
 
   #clockdiv{
     font-size: 30px;
+  }
+
+  #clockdiv div > span{
+    width: 80px;
+    height: 80px;
+    background: black;
   }
 }
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
