dummy name field hidden

--- a/main.css
+++ b/main.css
@@ -26,6 +26,12 @@ body, #data{
   width: 80%
 }
 
+#name, #namelabel{
+  visibility: hidden;
+  width: 0;
+}
+
+
 #countdown{
   margin-top: 2em;
   
