whatsapp hover addition

--- a/main.css
+++ b/main.css
@@ -76,6 +76,10 @@ form{
   border: #dd2a7b 1px solid;
 }
 
+.whatsapp:hover{
+  border: #25d366 1px solid;
+}
+
 .twitter:hover{
   border: #00acee 1px solid;
 }
