--- a/main.css
+++ b/main.css
@@ -7,10 +7,6 @@
   word-break: break-word; /* to stop overflow due to long words */
 }
 
-body{
-  height: 100vh;
-}
-
 body, #data{
   display: flex;
   flex-direction: column;
@@ -84,6 +80,51 @@ form{
   border: #00acee 1px solid;
 }
 
+#carousel{
+  position: relative;
+  width: 100%;
+  background-color: #838383;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider-image-div{
+  display: none;
+}
+
+.slider-image{
+  width:100%;
+  object-fit: contain;
+}
+
+.slider-button{
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  width: 30px;
+  height: 30px;
+  background-color: rgb(255,191,0,0.5);
+  background-blend-mode: soft-light;
+  z-index: 3;
+  position: absolute;
+  bottom: 50%;
+  text-align: center;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#button-left{
+  left: 15px;
+}
+
+#button-right{
+  right: 15px;
+}
+
+/* Countdown */
 #clockdiv{
   font-family: sans-serif;
   color: black;
@@ -115,13 +156,11 @@ form{
   padding-top: 5px;
   font-size: 16px;
 }
+/* Countdown */
 
 footer{
-  position: absolute;
-  bottom:0;
   padding: 0.2em;
 }
-
 
 @media only screen and (min-width: 60em) {
   /* Style adjustments for viewports that meet the condition */
@@ -137,6 +176,14 @@ footer{
   #clockdiv{
     color: white;
   }
+
+  #carousel{
+    margin: 0;
+    height: 100vh;
+    width: 50%;
+  }
+
+  /* Countdown */
   #countdown{
     margin:0;
     /* background-color: #838383; */
@@ -157,6 +204,12 @@ footer{
     width: 80px;
     height: 80px;
     background: black;
+  }
+  /* Countdown */
+
+  footer{
+    position: absolute;
+    bottom:0;
   }
 }
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
