--- a/main.css
+++ b/main.css
@@ -59,6 +59,18 @@ main{
   margin-bottom: 3em;
 }
 
+#yt-wrap{
+  padding-bottom: 56.25%; 
+  padding-top: 30px; 
+  height: 0; 
+  overflow: hidden;
+}
+
+#yt-player{
+  width: 100%;
+  height: 100%;
+}
+
 #message{
   /* width: 80%; */
   padding: 0 50px;
