--- a/main.css
+++ b/main.css
@@ -54,25 +54,15 @@ main{
   align-items: center;
 }
 
-#yt-wrap, #yt-player{
-  margin-top: 2em;
-  margin-bottom: 3em;
-}
-
 #yt-wrap{
-  padding-bottom: 56.25%; 
-  padding-top: 30px; 
-  height: 0; 
-  overflow: hidden;
+  margin-top: 2em;
 }
 
-#yt-player{
+#ytplayer{
   width: 100%;
-  height: 100%;
 }
 
 #message{
-  /* width: 80%; */
   padding: 0 50px;
   text-align: justify;
   text-align-last: center;
