--- a/main.css
+++ b/main.css
@@ -210,6 +210,38 @@ form{
   margin-top: 1em;
   margin-bottom: 2em;
 }
+
+.img-container{
+  position: relative;
+  width: 100%;
+  background-color: rgba(255, 255, 255,0.5);
+}
+
+.img-actual{
+  width: 100%;
+}
+
+.back-overlay{
+  background-color: rgba(255, 255, 255,0.5);
+  z-index:2;
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+
+.img-overlay{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: right;
+  text-shadow: 0 1px 0 grey;
+  z-index: 3;
+}
+
 #carousel{
   position: relative;
   width: 100%;
