--- a/blogs/serve.css
+++ b/blogs/serve.css
@@ -1,12 +1,3 @@
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif, sans-serif;
-  line-height: 1.6em;
-  word-break: break-word; /* to stop overflow due to long words */
-}
-
 :root{
   --pricol1: #ffb500, rgb(255, 191, 0);
   --pricol2: #838383, rgb(131, 131, 131);
@@ -18,373 +9,78 @@
   --font2: "Passion One", sans-serif;
 }
 
-html{
-  scroll-behavior: smooth ;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif, sans-serif;
+  line-height: 1.6em;
+  word-break: break-word; /* to stop overflow due to long words */
 }
 
-a, a:visited{
-  color: inherit;
+nav{
+  position: fixed;
+  top:0;
+  left:0;
+  height: 53px;
+  background-color: white;
+  width: 100%;
 }
 
-#above{
-    width: 90%;
-    margin-top: 2em;
+nav>a>img{
+  padding: 0.5em;
+  height: 50px;
+  width: auto;
+  display: inline-block;
 }
 
-body, #data{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+body{
+  text-align: center;
 }
 
-#data > *{
-  margin-bottom: 2em;
+article{
+  margin-top: 53px;
 }
 
-#main-logo{
-  width: 80%;
+header>img{
+  width: 100%;
 }
 
-#name, #namelabel{
-  visibility: hidden;
-  width: 0;
+#heading{
+  width: 90%;
+  text-align: justify;
+  display: inline-block;
+}
+
+#heading>*{
+  padding-top: 0.5em;
+}
+
+#heading>h1{
+  font-size: xx-large;
+}
+
+#heading>h2{
+  border-bottom: 3px solid #ffb500;
 }
 
 main{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#yt-wrap{
-  margin-top: 2em;
-}
-
-#ytplayer{
-  width: 100%;
-}
-
-#message{
-  padding: 0 50px;
-  text-align: justify;
-  text-align-last: center;
-  font-size: large;
-  font-weight: normal;
-}
-
-form{
-  margin-bottom: 0 !important;
-}
-
-#submess{
-  color: gray;
-  padding: 0 50px;
-  text-align: justify;
-  text-align-last: center;
-
-}
-
-#sm-handles{
-  display: flex;
-  margin: 2em auto;
-}
-
-.sm-icon{
-  height: 40px;
-  width: 40px;
-  margin: 0 5px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.sm-icon>img{
-  max-height: 60%;
-  margin:auto;
-}
-
-.fb:hover{
-  border: #3b5998 1px solid;
-}
-
-.insta:hover{
-  border: #dd2a7b 1px solid;
-}
-
-.whatsapp:hover{
-  border: #25d366 1px solid;
-}
-
-.twitter:hover{
-  border: #00acee 1px solid;
-}
-
-#features{
-  width: 100%;
-  text-align: center;
-}
-
-#fig-icons{
-  display: flex;
-  align-content: center;
-  overflow-x: auto;
-  margin-top: 1em;
-}
-
-.feature-fig{
-  width: 90px;
-  margin: 1em;
-  color: #838383;
-}
-
-.img-cont{
-  height: 90px;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  padding: 5px;
-  border-radius: 10px;
-  box-shadow: -7px -7px 14px #cbced1,
-               7px 7px 14px #cbced1;
-}
-
-#anti-fog{
-  box-shadow: inset 6px 6px 10px 0 #cbced1, 
-              inset -6px -6px 10px 0 #cbced1;
-}
-
-.feature-img{
-  max-height: 100%;
-  max-width: 100%;
-  width: auto;
-}
-
-#feature-desc{
-  position: relative;
-  height: 12em;
-  margin: 2em auto;
-}
-
-.feature-desc{
-  position: absolute;
-  /* top: 0;
-  left: 0; */
-  height: 18em;
-  padding-left: 2em;
-  padding-right: 2em;
-  width: 100%;
-  background-color: white;
-  text-align: justify;
-  text-align-last: center;
-  overflow: auto;
-}
-
-.h2-feature{
-  font-size: large;
-  font-weight: normal;
-}
-
-#anti-fog-desc{
-  z-index: 2;
-}
-
-#why{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: justify;
   width: 90%;
-}
-
-#hindu-pie{
-}
-
-#quote-name{
-  width: 100%;
-  text-align: right;
-}
-
-#smile-talk{
-  margin-top: 1em;
-  margin-bottom: 2em;
-}
-
-.img-container{
-  position: relative;
-  width: 100%;
-  background-color: rgba(255, 255, 255,0.5);
-}
-
-.img-actual{
-  width: 100%;
-}
-
-.img-overlay{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255,0.6);
-  /* background-color: rgb(131, 131, 131, 0.5); */
-  text-shadow: 0 1px 0 grey;
-  z-index: 3;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  /* color: #ffb500; */
-}
-
-.img-overlay>p{
-  text-decoration: underline;
-    /* color: #ffb500; */
-}
-
-#carousel{
-  position: relative;
-  width: 100%;
-  background-color: #838383;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.slider-image-div{
-  display: none;
-}
-
-.slider-image{
-  width:100%;
-  object-fit: contain;
-}
-
-.slider-button{
-  cursor: pointer;
-  color: white;
-  font-weight: bold;
-  width: 30px;
-  height: 30px;
-  background-color: rgb(255,191,0,0.5);
-  background-blend-mode: soft-light;
-  z-index: 3;
-  position: absolute;
-  bottom: 50%;
-  text-align: center;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-#button-left{
-  left: 15px;
-}
-
-#button-right{
-  right: 15px;
-}
-
-/* Countdown */
-#clockdiv{
-  font-family: sans-serif;
-  color: black;
-  display: inline-block;
-  font-weight: 100;
-  text-align: center;
-  font-size: 20px;
-}
-
-#clockdiv > div{
-  padding: 10px;
-  border-radius: 50%;
-  /* background: #00BF96; */
   display: inline-block;
 }
 
-#clockdiv div > span{
-  padding: 15px;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  /* background: #00816A; */
-  background: black;
-  display: inline-block;
-  color: white;
-}
-
-.smalltext{
-  padding-top: 5px;
-  font-size: 16px;
-}
-/* Countdown */
-
-footer{
-  padding: 0.2em;
-  z-index: 99;
+main>*{
+  padding-top: 0.5em;
+  text-align: justify;
 }
 
 @media only screen and (min-width: 60em) {
-  /* Style adjustments for viewports that meet the condition */
-  #above{
-    display: flex;
-    flex-direction: row;
-  }
-
-  #data{
+  article{
     width: 50%;
-    margin-left: 50vw;
-  }
-
-  .feature-desc{
-    padding: auto 4em;
-    height: 8em;
-  }
-
-  #clockdiv{
-    color: white;
-  }
-
-  #carousel{
-    position: fixed;
-    left: 0;
-    top: 0;
-    margin: 0;
-    height: 100vh;
-    width: 50%;
-  }
-
-  /* Countdown */
-  #countdown{
-    margin:0;
-    /* background-color: #838383; */
-    background-color: #ffbf00;
-    height: 100vh;
-    width: 50%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-
-  #clockdiv{
-    font-size: 30px;
-  }
-
-  #clockdiv div > span{
-    width: 80px;
-    height: 80px;
-    background: black;
-  }
-  /* Countdown */
-
-  footer{
+    display: inline-block;
   }
 }
+
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
 
 /* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
